--- a/src/styles/vars/_reset.scss
+++ b/src/styles/vars/_reset.scss
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Mukta&display=swap');
+@font-face {
+  font-family: 'KBCloudyDay';
+  src: local('KBCloudyDay'), url(../../fonts/KBCloudyDay/KBCloudyDay_AllText.ttf) format('truetype');
+}
 
 html {
   font-size: 62.5%;
@@ -7,7 +10,7 @@ html {
 body {
   margin: 0;
   overflow-x: hidden;
-  font-family: 'Mukta', sans-serif;
+  font-family: 'KBCloudyDay', sans-serif;
 }
 
 ol,
@@ -23,7 +26,7 @@ h3,
 h4,
 p,
 span {
-  font-family: 'Mukta', sans-serif;
+  font-family: 'KBCloudyDay', sans-serif;
   color: $color-black;
 }
 
@@ -56,3 +59,20 @@ span {
   width: 80%;
   margin: auto;
 }
+
+// /* width */
+// ::-webkit-scrollbar {
+//   width: 20px;
+// }
+
+// /* Track */
+// ::-webkit-scrollbar-track {
+//   box-shadow: inset 0 0 5px grey;
+//   border-radius: 10px;
+// }
+
+// /* Handle */
+// ::-webkit-scrollbar-thumb {
+//   background: red;
+//   border-radius: 10px;
+// }
