first setup for the avalibility block

--- a/src/styles/vars/_colors.scss
+++ b/src/styles/vars/_colors.scss
@@ -1,2 +1,23 @@
 $color-black: #000000;
 $color-white: #ffffff;
+
+$color-yellow: #FFED85;
+//$color-yellow-dark: ;
+$color-yellow-light: #FEEEBB;
+
+$color-orange: #E67245;
+$color-orange-light: #FFCC83;
+
+$color-pink: #A28D8F;
+$color-pink-dark: #876B75;
+$color-pink-light:  #B69F9A;
+
+$color-purple: #382245;
+//$color-purple-dark: ;
+$color-puple-light: #473A52;
+
+$color-red: #9E1C37;
+$color-red-dark: #8D3646;
+$color-red-light:  #B34D60;
+
+$color-brown: #2E1C12;
