--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -3,6 +3,7 @@
   width: 100%;
   min-width: 100rem;
   margin: 0 auto;
+  margin-bottom: 4rem;
 
   &__image {
     background: url('../../images/menu.png') no-repeat center center;
