--- a/src/styles/vars/_reset.scss
+++ b/src/styles/vars/_reset.scss
@@ -12,6 +12,7 @@ body {
   overflow-x: hidden;
   font-family: 'KBCloudyDay', sans-serif;
   background-color: $color-orange;
+  user-select: none;
 }
 
 ol,
@@ -32,28 +33,28 @@ span {
 }
 
 h1 {
-  font-size: 3.2rem;
+  font-size: 5.4rem;
   font-weight: 700;
 }
 
 h2 {
-  font-size: 2.8rem;
+  font-size: 4.2rem;
   font-weight: 700;
 }
 
 h3 {
-  font-size: 2.4rem;
+  font-size: 3rem;
   font-weight: 700;
 }
 
 h4 {
-  font-size: 1.8rem;
+  font-size: 2.4rem;
   font-weight: 500;
 }
 
 p,
 span {
-  font-size: 1.4rem;
+  font-size: 1.8rem;
 }
 
 .wrap {
@@ -61,19 +62,14 @@ span {
   margin: auto;
 }
 
-// /* width */
-// ::-webkit-scrollbar {
-//   width: 20px;
-// }
+/* width */
+::-webkit-scrollbar {
+  width: 2rem;
+  border-radius: 1.2rem;
+}
 
-// /* Track */
-// ::-webkit-scrollbar-track {
-//   box-shadow: inset 0 0 5px grey;
-//   border-radius: 10px;
-// }
-
-// /* Handle */
-// ::-webkit-scrollbar-thumb {
-//   background: red;
-//   border-radius: 10px;
-// }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $color-puple-light;
+  border-radius: 1.2rem;
+}
