--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,6 +8,7 @@
 //Components
 @import './components/header.scss';
 @import './components/availibility_block.scss';
+@import './components/video_block.scss';
 @import './components/test.scss';
 
 //Reset
