Added text block

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,7 @@
 @import './components/header.scss';
 @import './components/availibility_block.scss';
 @import './components/video_block.scss';
+@import './components/text_block.scss';
 @import './components/test.scss';
 
 //Reset
