added image text block

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,13 +3,16 @@
 @import './vars/_spacings.scss';
 
 //Webparts
+@import './webparts/button';
 @import './webparts/platform_button.scss';
+@import './webparts/image.scss';
 
 //Components
 @import './components/header.scss';
 @import './components/availibility_block.scss';
 @import './components/video_block.scss';
 @import './components/text_block.scss';
+@import './components/text-image_block.scss';
 @import './components/test.scss';
 
 //Reset
