--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -13,6 +13,7 @@
 @import './components/video_block.scss';
 @import './components/text_block.scss';
 @import './components/text-image_block.scss';
+@import './components/quote_block.scss';
 @import './components/test.scss';
 
 //Reset
