--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,6 +14,7 @@
 @import './components/text_block.scss';
 @import './components/text-image_block.scss';
 @import './components/quote_block.scss';
+@import './components/gallery.scss';
 @import './components/test.scss';
 
 //Reset
