Updated gallery with modal image view

--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -13,5 +13,11 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    cursor: pointer;
+    transition: transform .2s ease-in-out;
+
+    &:hover {
+     transform: scale(0.95);
+    }
   }
 }
