--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,6 +6,7 @@
 @import './webparts/button';
 @import './webparts/platform_button.scss';
 @import './webparts/image.scss';
+@import './webparts/modal';
 
 //Components
 @import './components/header.scss';
