--- a/src/styles/webparts/_button.scss
+++ b/src/styles/webparts/_button.scss
@@ -23,7 +23,7 @@
     padding: 2rem 0.5rem 2.5rem 0.5rem;
 
     &:hover {
-      color: $color-puple-light;
+      color: $color-white;
       transition: color 0.2s ease-in;
     }
   }
