--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,6 +16,7 @@
 @import './components/text-image_block.scss';
 @import './components/quote_block.scss';
 @import './components/gallery.scss';
+@import './components/footer.scss';
 @import './components/test.scss';
 
 //Reset
