--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,7 @@
 @import './webparts/platform_button.scss';
 @import './webparts/image.scss';
 @import './webparts/modal';
+@import './webparts//devider';
 
 //Components
 @import './components/header.scss';
@@ -18,6 +19,7 @@
 @import './components/gallery.scss';
 @import './components/footer.scss';
 @import './components/test.scss';
+@import './components/privacy.scss';
 
 //Reset
 @import './vars/_reset.scss';
