--- a/src/styles/components/availibility_block.scss
+++ b/src/styles/components/availibility_block.scss
@@ -1,22 +1,17 @@
 .availibility {
   height: 100%;
-  margin-bottom: 4rem;
-
-  &__devider {
-    border-top: 0.2rem solid $color-white;
-    margin-bottom: 4rem;
-  }
+  margin-bottom: 6rem;
 
   &__title {
     margin-bottom: 0;
   }
   
   &__box {
-    border: 0.4rem solid $color-white;
-    box-sizing: border-box;
-    max-width: 50%;
-    margin: auto;
+    background: url('../../images/Website_Platforms_MacWindowsLinux.png') no-repeat center center;
+    background-size: contain;
     margin-bottom: 2rem;
+    min-height: 8rem;
+    width: 100%;
   }
 
   &__icons {
