--- a/src/styles/vars/_colors.scss
+++ b/src/styles/vars/_colors.scss
@@ -3,7 +3,7 @@ $color-white: #ffffff;
 
 $color-yellow: #FFED85;
 //$color-yellow-dark: ;
-$color-yellow-light: #FEEEBB;
+$color-yellow-light: #EFEFCB;
 
 $color-orange: #E67245;
 $color-orange-light: #FFCC83;
@@ -13,7 +13,6 @@ $color-pink-dark: #876B75;
 $color-pink-light:  #B69F9A;
 
 $color-purple: #382245;
-//$color-purple-dark: ;
 $color-puple-light: #473A52;
 
 $color-red: #9E1C37;
