--- a/src/styles/vars/_reset.scss
+++ b/src/styles/vars/_reset.scss
@@ -21,6 +21,7 @@ li {
   color: $color-white;
   text-decoration: none;
   list-style: none;
+  font-size: 1.8rem;
 }
 
 h1,
@@ -31,7 +32,6 @@ p,
 span {
   font-family: 'KBCloudyDay', sans-serif;
   color: $color-white;
-  //margin: 0;
 }
 
 h1 {
@@ -61,20 +61,8 @@ span {
 }
 
 .wrap {
-  width: 80%;
+  width: 90%;
   margin: auto;
-}
-
-/* width */
-::-webkit-scrollbar {
-  width: 2rem;
-  border-radius: 1.2rem;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: $color-puple-light;
-  border-radius: 1.2rem;
 }
 
 .row {
