--- a/src/styles/webparts/platform_button.scss
+++ b/src/styles/webparts/platform_button.scss
@@ -6,6 +6,6 @@
     width: 8rem;
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
   }
 }
