added FAQ and about us content

--- a/src/styles/components/availibility_block.scss
+++ b/src/styles/components/availibility_block.scss
@@ -1,6 +1,5 @@
 .availibility {
   height: 100%;
-  margin-bottom: 6rem;
 
   &__title {
     margin-bottom: 0;
@@ -23,5 +22,9 @@
     &:hover {
       
     }
+  }
+
+  &__soon {
+    font-style: italic;
   }
 }
