--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -6,7 +6,8 @@
   margin-bottom: 6rem;
 
   &__image {
-    background: url('../../images/menu.png') no-repeat center center;
+    background: url('../../images/WebsiteHeader_Art.png') no-repeat center center;
+    background-position-y: bottom;
     background-size: cover;
     height: 100%;
     width: auto;
