--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,9 +8,12 @@
 @import './webparts/image.scss';
 @import './webparts/modal';
 @import './webparts//devider';
+@import './webparts/faq-item';
+@import './webparts/member';
 
 //Components
 @import './components/header.scss';
+@import './components/about.scss';
 @import './components/availibility_block.scss';
 @import './components/video_block.scss';
 @import './components/text_block.scss';
@@ -20,6 +23,7 @@
 @import './components/footer.scss';
 @import './components/test.scss';
 @import './components/privacy.scss';
+@import './components/faq.scss';
 
 //Reset
 @import './vars/_reset.scss';
