--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,12 +4,13 @@
 
 //Webparts
 @import './webparts/button';
-@import './webparts/platform_button.scss';
-@import './webparts/image.scss';
+@import './webparts/platform_button';
+@import './webparts/image';
 @import './webparts/modal';
 @import './webparts//devider';
 @import './webparts/faq-item';
 @import './webparts/member';
+@import './webparts/socials';
 
 //Components
 @import './components/header.scss';
@@ -24,6 +25,7 @@
 @import './components/test.scss';
 @import './components/privacy.scss';
 @import './components/faq.scss';
+@import './components/nav.scss';
 
 //Reset
 @import './vars/_reset.scss';
