--- a/src/styles/webparts/_member.scss
+++ b/src/styles/webparts/_member.scss
@@ -9,8 +9,9 @@
     font-size: 2.6rem;
     font-weight: 900;
   }
-
+  
   &__description {
+    color: $color-brown;
     font-style: italic;
   }
   
