--- a/src/styles/components/availibility_block.scss
+++ b/src/styles/components/availibility_block.scss
@@ -8,7 +8,7 @@
   &__box {
     background: url('../../images/Website_Platforms_MacWindowsLinux.png') no-repeat center center;
     background-size: contain;
-    margin-bottom: 2rem;
+    margin-bottom: $spacing-bottom-small;
     min-height: 8rem;
     width: 100%;
   }
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-bottom: 2rem;
+    margin-bottom: $spacing-bottom-small;
 
     &:hover {
       
