--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -1,11 +1,11 @@
 .gallery {
   &__wrapper {
     display: contents;
-    margin-bottom: 6rem;
+    margin-bottom: $spacing-bottom-big;
   }
 
   &__image-wrapper {
-    margin-top: 2rem;
+    margin-top: $spacing-small;
   }
 
   &__image {
