--- a/src/styles/vars/_reset.scss
+++ b/src/styles/vars/_reset.scss
@@ -35,28 +35,28 @@ span {
 }
 
 h1 {
-  font-size: 5.4rem;
+  font-size: $font-size-h1;
   font-weight: 700;
 }
 
 h2 {
-  font-size: 4.2rem;
+  font-size: $font-size-h2;
   font-weight: 700;
 }
 
 h3 {
-  font-size: 3rem;
+  font-size: $font-size-h3;
   font-weight: 700;
 }
 
 h4 {
-  font-size: 2.4rem;
+  font-size: $font-size-h4;
   font-weight: 500;
 }
 
 p,
 span {
-  font-size: 1.8rem;
+  font-size: $font-size-p;
   margin: 0;
 }
 
@@ -67,5 +67,5 @@ span {
 
 .row {
   min-height: 20rem;
-  margin-bottom: 6rem;
+  margin-bottom: $spacing-bottom-big;
 }
