--- a/src/styles/webparts/_button.scss
+++ b/src/styles/webparts/_button.scss
@@ -27,8 +27,8 @@
 
   &__text {
     color: $color-brown;
-    font-size: 2.4rem;
+    font-size: $font-size-h4;
     margin: 0 auto;
-    padding: 2rem 0.5rem 2.5rem 0.5rem;
+    padding: $spacing-small 0.5rem 2.5rem 0.5rem;
   }
 }
