--- a/src/styles/webparts/_devider.scss
+++ b/src/styles/webparts/_devider.scss
@@ -1,8 +1,8 @@
 .devider {
   background: url('../../images/Website_Line.png') no-repeat center center;
   background-size: contain;
-  margin-top: 1rem;
-  height: 2rem;
+  margin-top: $spacing-extra-samll;
+  height: $spacing-small;
   width: 100%;
-  margin-bottom: 2rem;
+  margin-bottom: $spacing-bottom-small;
 }
