added last changes for v1

--- a/src/styles/components/availibility_block.scss
+++ b/src/styles/components/availibility_block.scss
@@ -27,4 +27,13 @@
   &__soon {
     font-style: italic;
   }
+
+  &__gif {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+    margin-bottom: $spacing-bottom-small;
+    min-height: 8rem;
+    width: 100%;
+  }
 }
