--- a/src/styles/webparts/_socials.scss
+++ b/src/styles/webparts/_socials.scss
@@ -7,9 +7,9 @@
 
   &__icon {
     display: block;
-    margin: $spacing-small;
-    height: $spacing-big;
-    width: $spacing-big;
+    margin: 1rem;
+    height: 8rem;
+    width: 8rem;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
