added content to videoarts page + minor updates troughout the website

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -26,6 +26,7 @@
 @import './components/privacy.scss';
 @import './components/faq.scss';
 @import './components/nav.scss';
+@import './components/videoart.scss';
 
 //Reset
 @import './vars/_reset.scss';
